	- New editors for Agent Config Policy and Log Parser Policy. 


*
* 2.0.4
*

- New parameters in Linux platform subagent to get additional CPU information (frequency, model, etc.)
- Fixed bugs in LLDP based network topology discovery
- Correct notifications on threshold script errors
- Option to use last known value for cluster data aggregation in case of data collecion failure
- NXSL: implemented compound assignment operators and prefix increment/decrement for array elements
- NXSL: can access event parameters as event object attributes (like $event->$1 or $event->instance)
- Management console
	- Improved dashboard gauge widget
	- Added translucence option for dashboard line charts
	- Configurable display format for dashboard elements data sources
	- Improved inverted line chart support
	- DCI filter in DCI selection dialog
	- Configurable line width on ad-hoc line charts
	- Object tooltips in rack view
	- Line/area switch for all DCIs on chart level
- Android console
	- Reorganized alarm notification section (issue #1194)
- Fixed issues: #405, #775, #859, #984, #1086, #1112, #1186, #1194, #1195, #1196, #1197, #1200, #1209, #1210, #1214, #1223, #1227, #1231


*
* 2.0.3
*

- Additional parameters in Oracle subagent for redo logs and ASM monitoring
- NXSL: variable $errormsg holding error description set in catch block
- New NXSL function SplitString
- NXSL: new methods setExpectedState and setExcludeFromTopology in Interface class
- Default interface expected state can be configured
- GPS subagent (provides location data from NMEA compatible GPS receivers)
- Server can update node location using GPS subagent
- Fixed error while event alarm linking multiple times
- Fixed server hang on shutdown
- NetXMS processes uses LC_CTYPE from environment for terminal I/O
- Fixed bug in saving service checks
- Fixed server crash caused by heap corruption in MS SQL and DB/2 database drivers